src/test/ui/or-patterns/exhaustiveness-pass.stderr
error: or-patterns are not fully implemented yet
  --> $DIR/exhaustiveness-pass.rs:10:10
   |
LL |         (0 | _,) => {}
   |          ^^^^^

error: aborting due to previous error

